openbve (1.4.0.0-0ubuntu1) UNRELEASED; urgency=low

  * New upstream stable release (1.4.0.0)
    + update upstream URL to 'trainsimframework.org/*'
    + credits file as part of docs too
    + update 'changelog.html' and 'credits.html'

 -- Paul Sladen <sladen@ubuntu.com>  Sun, 08 Jan 2012 12:00:00 +0100

openbve (1.2.10.0-0ubuntu3) precise; urgency=low

  * debian/control: Add missing dependency (libmono-i18n4.0-all) and remove
    dependency on libmono-i18n4.0-cil as the latter is a dependency of the
    first. Thanks to Paul Childs for the fix and to Paul Sladen for finding a
    dependency simplification. (LP: #877776)
    Adding also ${misc:Depends} to the Depends field and bumping the
    Standards-Version to 3.9.2 (current version).
  * debian/rules: Add build-arch and build-indep recommended targets.

 -- Alessandro Menti <alessandro.menti@hotmail.it>  Sat, 29 Oct 2011 19:40:10 +0200

openbve (1.2.10.0-0ubuntu2) oneiric; urgency=low

  * debian/rules: Skip AtsPluginProxy.dll modulrefs, these are Win32 only.
  * openBVE/OpenBveApi/OpenBveApi.csproj,
    openBVE/OpenBve/OpenBve.csproj: set TargetFrameworkVersion to v4.0.
  * debian/control: Tweak dependencies and build-dependencies for 4.0.

 -- Jo Shields <directhex@apebox.org>  Sat, 02 Jul 2011 22:11:00 +0100

openbve (1.2.10.0-0ubuntu1) natty; urgency=low

  * New upstream stable version (1.2.10.0)

 -- Paul Sladen <ubuntu@paul.sladen.org>  Tue, 28 Dec 2010 04:12:00 +0000

openbve (1.2.7.3-0ubuntu3) natty; urgency=low

  * debian/control: Fixed typo in first line of third paragraph of
    the package description-missing 's' in 'based' (LP: #628758)

 -- Arvind S Raj <sraj.arvind@gmail.com>  Fri, 24 Dec 2010 07:46:07 +0530

openbve (1.2.7.3-0ubuntu2) maverick; urgency=low

  * debian/control: fix minor spelling mistakes (LP: #628758)

 -- Paul Sladen <ubuntu@paul.sladen.org>  Sat,  9 Oct 2010 02:29:00 +0100

openbve (1.2.7.3-0ubuntu1) maverick; urgency=low

  * New upstream stable version (1.2.7.3)
