@@ -1,3 +1,4 @@
 usr/share/doc/openbve/
 usr/lib/openbve/
+usr/lib/openbve/Plugins
 usr/games
